Implement GET /users request
